tests/errors/sem_array2.java
public class sem_array2 {
public static void main(String[] args){
int[] values;
int i = values[ true ];
}
}